--- a/final/force-app/main/default/classes/MapController.cls
+++ b/final/force-app/main/default/classes/MapController.cls
@@ -1,5 +1,6 @@
 public with sharing class MapController {
-    public MapController() {
-
+    @AuraEnabled
+    public static List<Car_Center__c> findServicesForMap(){
+        return [SELECT Id,Name,Latitude__c,Longitude__c FROM Car_Center__c];
     }
 }
