modify view of services

--- a/final/force-app/main/default/classes/ServicesController.cls
+++ b/final/force-app/main/default/classes/ServicesController.cls
@@ -2,7 +2,7 @@ public with sharing class ServicesController {
     @AuraEnabled
     public static List<Car_Center__c> getServices() {
         return [SELECT Id,Name,Address__c,Contact_Number__c,
-            Working_Hours__c
+            Working_Hours__c, RecordTypeId, Description__c
             FROM Car_Center__c
             ];
         
