modify app and controllers

--- a/final/force-app/main/default/classes/LadaCarController.cls
+++ b/final/force-app/main/default/classes/LadaCarController.cls
@@ -1,4 +1,4 @@
-public with sharing class LadaCarController {
+public without sharing class LadaCarController {
     public LadaCarController() {
 
     }
