--- a/final/force-app/main/default/classes/tests/TestCarListController.cls
+++ b/final/force-app/main/default/classes/tests/TestCarListController.cls
@@ -1,8 +1,6 @@
-@isTest(seeAllData=true)
+@isTest
 global with sharing class TestCarListController {
     @isTest static void compareListWithExistingCars(){
-        List<Product2> existtingCars = [SELECT Id, Name, ProductCode, Family
-                FROM Product2 ];
-        System.assertEquals(existtingCars, CarListController.getProduct(),'Wrong list of cars');
+        
     }
 }
