--- a/final/force-app/main/default/classes/BatchUpdateExchangeRate.cls
+++ b/final/force-app/main/default/classes/BatchUpdateExchangeRate.cls
@@ -1,16 +1,36 @@
-global class BatchUpdateExchangeRate implements Database.Batchable<sObject>, Schedulable {
-    
-    global Database.QueryLocator start(Database.BatchableContext bc) {
-        return Database.getQueryLocator('SELECT Id,Product2Id,CurrencyIsoCode,UnitPrice'+
-                                        'FROM PricebookEntry'+
-                                        'WHERE Pricebook2Id = 01s5j00000GRjGZAA1'+
-                                        'AND CurrencyIsoCode = BYR');
+global class BatchUpdateExchangeRate implements Database.Batchable<sObject>,
+    Schedulable, Database.AllowsCallouts, Database.Stateful {
+
+    global Database.QueryLocator start(Database.BatchableContext bc) { 
+        return Database.getQueryLocator(
+            [SELECT Id,Product2Id,CurrencyIsoCode,UnitPrice
+            FROM PricebookEntry
+            WHERE Pricebook2.Name = 'LADA Cars Price Book'
+            /*AND CurrencyIsoCode = 'BYR'*/]);
+                                        // 'SELECT Id,Product2Id,CurrencyIsoCode,UnitPrice'+
+                                        // 'FROM PricebookEntry'+
+                                        // 'WHERE Pricebook2Id = "01s5j00000GRjGZAA1"'+
+                                        // 'AND CurrencyIsoCode = "BYR"');
     }
     
-    global void execute(Database.BatchableContext bc, List<PricebookEntry> pbeBYR){
+    global void execute(Database.BatchableContext bc, List<PricebookEntry> pbe){		
+        List<PricebookEntry> updateList = new List<PricebookEntry>();
+        for(PricebookEntry pbEntry : pbe){
+            if(pbEntry.CurrencyIsoCode!='BYN'){
+                pbEntry.UnitPrice /= Double.valueOf(Cache.Org.get(CurrencyIsoCode));
+            }
+        }
+        update updateList;
+    }
+    
+    global void finish(Database.BatchableContext bc){
+        
+    }
+    
+    global void execute(SchedulableContext ctx) {
         Http http = new Http();
         HttpRequest request = new HttpRequest();
-        request.setEndpoint('https://www.nbrb.by/api/exrates/rates?periodicity=0');//nb ne rabotaet!!!
+        request.setEndpoint('https://www.nbrb.by/api/exrates/rates?periodicity=0');
 		request.setMethod('GET');
         HttpResponse response; 
         try{
@@ -18,38 +38,17 @@ global class BatchUpdateExchangeRate implements Database.Batchable<sObject>, Sch
         } catch (System.CalloutException e){
             System.debug('The following exception has occurred: ' + e.getMessage());
         }
-        //
         List<Map<String, String>> valueList = (List<Map<String, String>>)JSON.deserializeUntyped(response.getBody());
-		
-        List<PricebookEntry> updateList = new List<PricebookEntry>();
-        for(PricebookEntry pbEntry : pbeBYR){
-            for(Map<String, String> value : valueList){
-                for(String ISOCode : LadaCarController.AVAILABLE_CURRENCY){
-                    try{
-                        Cache.Org.put(ISOCode, 
-                            Double.valueOf(value.get('Cur_OffitialRate'))*
-                            Double.valueOf(value.get('Cur_Scale')));
-//!!! for nbrb  !!!
-                        pbEntry.CurrencyIsoCode = ISOCode;
-                        pbEntry.UnitPrice *= Double.valueOf(Cache.Org.get(ISOCode));
-                        updateList.add(pbEntry);
-                    } catch(Exception e) {
-                        System.debug('The following exception has occurred:' + e.getMessage());
-                        continue;
-                    }
-                }
+        for(String ISOCode : LadaCarController.AVAILABLE_CURRENCY){
+            try{
+                Cache.Org.put(ISOCode, 
+                    Double.valueOf(value.get('Cur_OffitialRate'))*
+                    Double.valueOf(value.get('Cur_Scale')));
+            } catch(Exception e) {
+                System.debug('The following exception has occurred:' + e.getMessage());
+                continue;
             }
         }
-        update updateList;
-    }
-    
-    global void finish(Database.BatchableContext bc){
-        /*PricebookEntry currentPbe = new PricebookEntry();
-        currentPbe.valueIsoCode.set(ISOCode);
-        currentPbe.UnitPrice *= Cache.Org.get(ISOCode);*/
-    }
-    
-    global void execute(SchedulableContext ctx) {
         Database.executeBatch(this);
     }
 }
