--- a/final/force-app/main/default/classes/TestBatchUpdateExchangeRate.cls
+++ b/final/force-app/main/default/classes/TestBatchUpdateExchangeRate.cls
@@ -1,33 +1,34 @@
 @isTest
 public with sharing class TestBatchUpdateExchangeRate {
     
-    @isTest static void testSmthng() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaCarController.AVAILABLE_CURRENCY,3);
+    @isTest static void testCorrectUseCase() {
+        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,3);
         Test.setMock(HttpCalloutMock.class, new TestDataFactoryLada()); 
         Test.startTest();
-        BatchUpdateExchangeRate buer = new BatchUpdateExchangeRate();
-        buer.execute(null);
+        BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
+        testBatchObject.execute(null);
         Test.stopTest();
         System.assertEquals(30,[SELECT count() FROM PricebookEntry]);
-        System.assertEquals(0,buer.getOriginalPrice('01t5j000000tOjQAAU'),'Original price is wrong!');        
+        System.assertEquals(0,testBatchObject.getOriginalPrice('01t5j000000tOjQAAU'),'Original price is wrong!');        
     }
 
-    @isTest static void testSmthngElse() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaCarController.AVAILABLE_CURRENCY,0);
+    @isTest static void testEmptyListOfProducts() {
+        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
         Test.setMock(HttpCalloutMock.class, new TestDataFactoryLada()); 
         Test.startTest();
-        BatchUpdateExchangeRate buer = new BatchUpdateExchangeRate();
-        buer.execute(null);
+        BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
+        testBatchObject.execute(null);
         Test.stopTest();
-        System.assertEquals(null,buer.getOriginalPriceList());        
+        System.assertEquals(null,testBatchObject.getOriginalPriceList());        
     }
 
-    @isTest static void testSmthngElseElse() {
-        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaCarController.AVAILABLE_CURRENCY,0);
+    @isTest static void testIncorrectHttpResponse() {
+        List<PricebookEntry> pbEntries = TestDataFactoryLada.createTestProducts(LadaConstantsManager.AVAILABLE_CURRENCY,0);
         Test.setMock(HttpCalloutMock.class, new TestIncorrectHttpMock()); 
         Test.startTest();
-        BatchUpdateExchangeRate buer = new BatchUpdateExchangeRate();
-        buer.execute(null);
-        Test.stopTest();       
+        BatchUpdateExchangeRate testBatchObject = new BatchUpdateExchangeRate();
+        testBatchObject.execute(null);
+        Test.stopTest();
+        System.assertEquals(null,testBatchObject.getOriginalPriceList());       
     }
 }
